--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
 .center {
   text-align: center;
-  border: 10px dotted rgb(74, 4, 74)
+  border: 5px dotted rgb(74, 4, 74);
+  background-color: rgb(187, 158, 214);
+}
+
+h3 {
+  @font-face 
+    font-family: 'bardstown_demoregular';
+    src: url('http://127.0.0.1:5500/index.html') format('woff2'),
+         url('http://127.0.0.1:5500/index.html') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
