Add README.md to project.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 }
 
  .flowers {
-    background-image: url("../images/wildflowers.jpeg"); size: 3000px;
+    background-image: url("../images/wildflower-background.jpeg");
     width: 100%;
   
 }
