--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,6 @@
     width: 100%;
 }
 
-.r-column {
-  width: 400px;
-  float: right;
-}
-
 .sidebar {
   float: right;
   width: 50%;
@@ -35,3 +30,32 @@
   font-style: italic;
 }
 
+.l-column {
+  width: 50%;
+  float: left;
+  background-color: rgba(73, 43, 100, 0.622);
+  text-align: center;
+  padding: 20px;
+  font-size: 200%;
+  margin: 20px;
+}
+
+.r-column {
+  width: 50%;
+  float: right;
+  background-color: rgba(73, 43, 100, 0.622);
+  text-align: center;
+  padding: 20px;
+  font-size: 200%;
+  margin: 20px;
+}
+.photo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+img {
+  border: 1in; color: rgb(32, 3, 47);
+}
