--- a/css/styles.css
+++ b/css/styles.css
@@ -48,4 +48,19 @@ img {
   font-size: 200%;
   background-size: contain;
   margin: 20px;
+  
+}
+
+.peachy {
+  color: black;
+  background-color: rgba(192, 147, 120, 0.683);
+  font-family: Georgia;
+  margin: 20px;
+  padding: 20px;
+}
+
+h3 {
+  text-align: center;
+  font-size: x-large;
+  color: rgb(41, 9, 71);
 }
